Update graph1 & end graph 2
Update graph1 & end graph 2

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
       pointer-events: none;			
     }
 
+    .checkbox {
+      display: inline;
+    }
+
     a:lang(ar),
     a:lang(ckb),
     a:lang(kk-arab),
