--- a/index.html
+++ b/index.html
@@ -2207,9 +2207,10 @@
 
     <!--END PAGE-->
   </div>
-  <!--<script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>-->
-  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <!--<script src="https://d3js.org/d3.v5.min.js"></script>
+  -->
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
   <script src="./assets/becode-app.js"></script> 
 
